--- a/ui/src/app/views/settings/user/consumer-details-modal/consumer-details-modal.html
+++ b/ui/src/app/views/settings/user/consumer-details-modal/consumer-details-modal.html
@@ -1,4 +1,4 @@
-<ng-template let-context let-modal="modal" #consumerDetailsModal>
+<div>
     <div class="header">
         {{ 'auth_consumer_details_modal_title' | translate: { name: consumer.name } }} <div *ngIf="consumer.disabled"
             class="ui red label">
@@ -114,4 +114,4 @@
             </div>
         </div>
     </div>
-</ng-template>
+</div>
