--- a/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.html
+++ b/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.html
@@ -5,8 +5,8 @@
                 <div class="ui buttons">
                     <div class="ui blue button" (click)="showAsCodeEditor()">
                         <i class="terminal icon"></i> {{'workflow_edit_as_code' | translate}}
-                        <i class="orange warning sign icon ml5" *ngIf="previewMode" suiPopup
-                            [popupText]="'workflow_preview_mode' | translate" popupPlacement="top center">
+                        <i class="orange warning sign icon ml5" *ngIf="previewMode" nz-tooltip
+                           nzTooltipTitle="Your pipeline is in preview mode">
                         </i>
                     </div>
                     <div *ngIf="previewMode" class="ui green button" (click)="savePreview()">
