--- a/ui/src/app/views/environment/show/environment.show.scss
+++ b/ui/src/app/views/environment/show/environment.show.scss
@@ -11,7 +11,22 @@
   .ascodeButton {
     position: absolute;
     right: 15px;
-    top: 121px;
+    top: 135px;
+  }
+}
+
+.labelFeature {
+  position: relative;
+  top: -3px;
+  margin-left: 10px;
+  margin-top: 5px;
+
+  nz-tag {
+    cursor: pointer;
+  }
+
+  i {
+    margin-right: 5px;
   }
 }
 
